tests/semantic/agg_checks/agg_checks.err
Error: Ungrounded variable X in file agg_checks.dl at line 10
r("X",Y) :- Y = min X : { X != Y }.
--------------------^---------------
Error: Ungrounded variable Y0 in file agg_checks.dl at line 10
r("X",Y) :- Y = min X : { X != Y }.
-------------------------------^----
Warning: Variable Y0 only occurs once in file agg_checks.dl at line 10
r("X",Y) :- Y = min X : { X != Y }.
-------------------------------^----
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
------^--------------------------------------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
------------^--------------------------------
Error: Couldn't assign types to the aggregator in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
----------------^----------------------------
Error: Unable to deduce type for variable X in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
--------------------^------------------------
Following constraints are incompatible:
   Type of variable 'X' should be a subtype of 'symbol'
   var(min X : { X != Y0,!a(X,Y0) }) <: var(X)
Error: Ungrounded variable X in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
--------------------^------------------------
Error: Unable to deduce type for variable Y0 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
-------------------------------^-------------
Error: Ungrounded variable Y0 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
-------------------------------^-------------
Error: Unable to deduce type for variable Y0 in file agg_checks.dl at line 11
r("X",Y) :- Y = min X : { X != Y, !a(X,Y) }.
---------------------------------------^-----
Error: Ungrounded variable X in file agg_checks.dl at line 14
r("X",Y) :- Y = min X : { a("A",2) }.
--------------------^-----------------
Warning: Variable X only occurs once in file agg_checks.dl at line 14
r("X",Y) :- Y = min X : { a("A",2) }.
--------------------^-----------------
Error: Ungrounded variable X in file agg_checks.dl at line 17
r("X",Y) :- Y = min X : { a("A",Y), Y>X }.
--------------------^----------------------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
------^-------------------------
Error: Unable to deduce type for variable Y in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
------------^-------------------
Error: Couldn't assign types to the aggregator in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
----------------^---------------
Error: Unable to deduce type for variable X in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
--------------------^-----------
Following constraints are incompatible:
   Type of variable 'X' should be a subtype of 'symbol' in file agg_checks.dl at line 20
r("X",Y) :- Y = min X : a(X,_).
------------------------^-------
   var(min X : { a(X,_) }) <: var(X)
Error: Undefined relation nonexistent in file agg_checks.dl at line 31
r("X",count: { nonexistent(_,_) }).
---------------^--------------------
Error: Undefined relation nonexistent in file agg_checks.dl at line 32
r("X",count: { nonexistent(_,_) } * 3).
---------------^------------------------
Error: Unable to stratify relation(s) {r}
Relation r in file agg_checks.dl at line 6
.decl r(a:symbol,b:number)
------^--------------------
has cyclic aggregation in file agg_checks.dl at line 28
r("X",Y) :- Y = min Y : r("X",Y).
------------------------^---------
19 errors generated, evaluation aborted